--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,6 +7,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 
   <link rel="stylesheet" href="styles.css"/>
+
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Meet landing page</title>
 </head>
@@ -18,33 +23,37 @@
       <img class="hero-left" src="assets/desktop/image-hero-left.png" alt=""/>
       <img class="hero-right" src="assets/desktop/image-hero-right.png" alt=""/>
     </div>
-    <h1>Group Chat for Everyone</h1>
+    <h1>Group Chat <br/> for Everyone</h1>
     <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
 
-    <button>Download v1.3</button>
-    <button>What is it?</button>
-    <div></div>
-    <div>01</div>
+    <button class="download-button1">Download <span>v1.3</span></button>
+    <button class="what-is-it-button">What is it?</button>
+    <div class="line"></div>
+    <div class="circle">
+      <p>01</p>
+    </div>
     <section class="models">
       <img src="assets/desktop/image-woman-in-videocall.jpg" alt="woman in a video call"/>
       <img src="assets/desktop/image-women-videochatting.jpg" alt="three women in video call"/>
       <img src="assets/desktop/image-men-in-meeting.jpg" alt="man in a meeting"/>
       <img src="assets/desktop/image-man-texting.jpg" alt="man texting"/>
     </section>
-    <h2>Built for modern use</h2>
+    <h2>BUILT FOR MODERN USE</h2>
 
-    <h3>Smarter meetings, all in one place</h3>
+    <h3 class="smarter-meetings">Smarter meetings, all in one place</h3>
 
-    <p>Send messages, share files, show your screen, and record your meetings — all in one 
+    <p class="send-message">Send messages, share files, show your screen, and record your meetings — all in one 
     workspace. Control who can join with invite-only team access, data encryption, and data export.</p>
     
-    <div></div>
-    <div>02</div>
-    <article>
+    <div class="line"></div>
+    <div class="circle">
+      <p>02</p>
+    </div>
+    <footer>
   
       <h3>Experience more together</h3>
       <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-      <button>Download v1.3</button>
-    </article>
+      <button class="download-button2">Download v1.3</button>
+    </footer>
 </body>
 </html>
