--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -23,11 +23,15 @@
       <img class="hero-left" src="assets/desktop/image-hero-left.png" alt=""/>
       <img class="hero-right" src="assets/desktop/image-hero-right.png" alt=""/>
     </div>
-    <h1>Group Chat <br/> for Everyone</h1>
-    <p>Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
 
-    <button class="download-button1">Download <span>v1.3</span></button>
-    <button class="what-is-it-button">What is it?</button>
+    <article class="main-text-and-buttons">
+      <h1>Group Chat <br/> for Everyone</h1>
+      <p class="meet-text">Meet makes it easy to connect with others face-to-face virtually and collaborate across any device.</p>
+
+      <button class="download-button1">Download <span>v1.3</span></button>
+      <button class="what-is-it-button">What is it?</button>
+    </article>
+    
     <div class="line"></div>
     <div class="circle">
       <p>01</p>
