--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -56,8 +56,10 @@
     <footer>
   
       <h3>Experience more together</h3>
-      <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-      <button class="download-button2">Download v1.3</button>
+      <div>
+        <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+      </div>
+      <button class="download-button2">Download <span>v1.3</span></button>
     </footer>
 </body>
 </html>
